# llm-bench

./: .gitignore  CONTRIBUTING.md  MIGRATION_PLAN.md  README.md  VISION.md  calc_avg.py  frontmatter.py  merge_intervals.py  parse_frontmatter.py  pyproject.toml
.claude/: CLAUDE.md
_meta/: .session_id  doctrine.md  ethos.md  telos.md
_meta/agentdb/: agent.db  agent.db.json
_meta/handoffs/: bedrock-providers-2026-06-27.md  lhcr-experiment-design-2026-06-28.md  start-replay-bootstrap-2026-06-27.md  workshop-eval-reframe-2026-06-27.md
_meta/reference/: lhcr-cloud-runbook.md
_meta/research/: eval-floor-discipline.md  lhcr-results-2026-06-28.md
docs/: consolidation.md  metrics-hygiene.md
docs/archive/: benchmark-era.md
experiments/: honesty_bug_probe.py
experiments/floor/: PREREGISTRATION-fix.md  PREREGISTRATION-suite.md  PREREGISTRATION.md  before_snapshot.json  eee_rows.json  results.json  run_floor.py  run_suite.py  suite_results.json  verifier_weak_evidence.json
results/community/: ariaxhan-m4pro-24gb.json
results/familiarity/: README.md  card-deepseek_v3_2.json  card-deepseek_v3_2.md  card-google_gemma-3-12b-it.json  card-google_gemma-3-12b-it.md  card-google_gemma-3-27b-it.json  card-google_gemma-3-27b-it.md  card-minimax_minimax-m2.json  card-minimax_minimax-m2.md  card-minimax_minimax-m2_1.json  card-minimax_minimax-m2_1.md  card-minimax_minimax-m2_5.json  card-minimax_minimax-m2_5.md  card-mistral_devstral-2-123b.json  card-mistral_devstral-2-123b.md  card-mistral_magistral-small-2509.json  card-mistral_magistral-small-2509.md  card-mistral_ministral-3-14b-instruct.json  card-mistral_ministral-3-14b-instruct.md  (+55 more)
tests/: test_bedrock.py  test_extract.py  test_familiarity.py  test_lhcr.py  test_providers.py  test_redact.py  test_scoring.py  test_verify.py
(+130 files in other folders)
