[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-bench"
version = "0.1.0"
description = "Benchmark local/OSS LLMs against Claude tiers with practical workflow tests"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Aria Han", email = "aria@ariaxhan.com" },
]
keywords = ["llm", "benchmark", "ollama", "apfel", "claude", "local-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "boto3>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
llm-bench = "llm_bench.cli:main"

[project.urls]
Homepage = "https://github.com/ariaxhan/llm-bench"
Repository = "https://github.com/ariaxhan/llm-bench"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/llm_bench/tests/*.py" = ["E501"]
"experiments/*.py" = ["E501"]
# Prompt/transcript-bearing modules: long strings are challenge prompts, known-correct
# outcomes, and synthetic floor transcripts — exempt from line length like test prompts.
"src/llm_bench/familiarity/challenges.py" = ["E501"]
"src/llm_bench/familiarity/lhcr_judge.py" = ["E501"]
"src/llm_bench/familiarity/lhcr.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
